<resources>
    <string name="app_name">ContactApp</string>
    <string name="action_settings">Settings</string>
    <string name="contact_picture">Contact Picture</string>
    <string name="back_button_placeholder">Back Button</string>
    <string name="contact_picture_descripton">Contact Picture</string>
    <string name="call_button_desc">Call button</string>
    <string name="call_placeholder">Call</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="create_contact_title">Create Contact</string>
    <string name="save_button_text">SAVE</string>
    <string name="email_hint">Email</string>
    <string name="email_photo_desc">email photo</string>
    <string name="phone_number_desc">phone number</string>
    <string name="name_desc">name</string>
    <string name="add_photo_placeholder">add photo placeholder</string>
    <string name="default_phone_number">+9188888888888</string>
    <string name="phone_symbol_desc">Phone symbol</string>
    <string name="phone_text">Phone</string>
    <string name="default_email">john@doe.com</string>
    <string name="email_text">Email</string>
    <string name="edit_contact">Edit Contact</string>
</resources>
