<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <ImageView
                    android:id="@+id/img_clear_button"
                    android:src="@drawable/ic_clear_white_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:contentDescription="@string/back_button_placeholder" />
                <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
                    <TextView
                        android:id="@+id/tv_create_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"
                        android:text="@string/create_contact_title" />
                    <TextView
                        android:id="@+id/tv_save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="14sp"
                        android:padding="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/save_button_text"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_add_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/add_photo_placeholder"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_a_photo_blue_24dp"
                app:layout_constraintBottom_toTopOf="@+id/layout_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/img_add_photo">

                <ImageView
                    android:id="@+id/img_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/name_desc"
                    android:src="@drawable/ic_person_outline_blue_24dp"
                    app:layout_constraintEnd_toStartOf="@id/et_name"
                    app:layout_constraintTop_toBottomOf="@id/img_add_photo" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toEndOf="@id/img_name"
                    app:layout_constraintTop_toBottomOf="@id/img_add_photo"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/layout_name">

                <ImageView
                    android:id="@+id/img_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/phone_number_desc"
                    android:src="@drawable/ic_call_blue_24dp"
                    app:layout_constraintEnd_toStartOf="@id/et_name"
                    app:layout_constraintTop_toBottomOf="@id/img_add_photo" />

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number_hint"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/layout_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/layout_number">

                <ImageView
                    android:id="@+id/img_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/email_photo_desc"
                    android:src="@drawable/ic_mail_outline_blue_24dp"
                    app:layout_constraintEnd_toStartOf="@id/et_name"
                    app:layout_constraintTop_toBottomOf="@id/img_add_photo" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/et_number" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
